--- a/exercise-17/frontend/libraryapp/src/app/app.component.html
+++ b/exercise-17/frontend/libraryapp/src/app/app.component.html
@@ -1,18 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" style="color:white;">Library</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02"
+          aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
+
   <div class="collapse navbar-collapse" id="navbarColor02">
+
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
         <a class="nav-link" (click)="onOpenModal(null, 'add')">Add Book <span class="sr-only">(current)</span></a>
       </li>
     </ul>
+
     <form class="form-inline my-2 my-lg-0">
       <input type="search" (ngModelChange)="searchBooks(key.value)" #key="ngModel" ngModel
              name="key" id="searchName" class="form-control mr-sm-2" placeholder="Search books..." required>
     </form>
+
   </div>
 </nav>
 
@@ -23,6 +29,14 @@
         <div class="card-body row">
           <div class="col-6 card-title align-self-center mb-0">
             <h5>{{book?.title}}</h5>
+            <h5>Authors:</h5>
+              <ul>
+                <li *ngFor="let author of book.authorsList">{{author.name}}</li>
+              </ul>
+            <h5>Genres:</h5>
+            <ul>
+              <li *ngFor="let genre of book.genresList">{{genre.type}}</li>
+            </ul>
           </div>
         </div>
         <div class="card-body">
@@ -110,7 +124,7 @@
   </div>
 </div>
 
-<!-- Notification for no employees -->
+<!-- Notification for no books -->
 <div *ngIf="books?.length == 0" class="col-lg-12 col-md-12 col-xl-12">
   <div class="alert alert-info" role="alert">
     <h4 class="alert-heading">NO BOOKS!</h4>
