--- a/exercise-16/src/main/resources/templates/save.html
+++ b/exercise-16/src/main/resources/templates/save.html
@@ -53,17 +53,9 @@
                     <form id="edit-form2" action="save.html" th:action="@{/save}" th:method="post" th:object="${bookDto}">
 
                         <div class="row">
-                            <div class="form-group col-md-6">
-                                <label for="title" class="col-form-label">Title</label>
-                                <input type="text" th:field="*{title}" class="form-control" id="title" placeholder="Title">
-                                <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="text-danger"></span>
-                            </div>
-                        </div>
-
-                        <div class="row">
                             <label for="author-select" th:text="#{author-table-header}">Author_</label>
                             <select id="author-select" th:field="*{authorsList}" name="authorsList">
-                                <option th:each="eAuthor : ${authorsList}"
+                                    <option th:each="eAuthor : ${authorsList}"
                                         th:value="${eAuthor.id}"
                                         th:text="${eAuthor.name}">Author name
                                 </option>
@@ -71,13 +63,21 @@
                         </div>
 
                         <div class="row">
-                            <label for="genre-select2" th:text="#{book-table-genres}">Genre_</label>
-                            <select id="genre-select2" th:field="*{genresList}" name="genresList">
+                            <label for="genre-select" th:text="#{book-table-genres}">Genre_</label>
+                            <select id="genre-select" th:field="*{genresList}" name="genresList">
                                 <option th:each="eGenre : ${genresList}"
                                         th:value="${eGenre.id}"
                                         th:text="${eGenre.type}"> Genre name
                                 </option>
                             </select>
+                        </div>
+
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label for="title" class="col-form-label">Title</label>
+                                <input type="text" th:field="*{title}" class="form-control" id="title" placeholder="Title">
+                                <span th:if="${#fields.hasErrors('title')}" th:errors="*{title}" class="text-danger"></span>
+                            </div>
                         </div>
 
                         <div class="row">
