--- a/exercise-16/src/main/resources/templates/authors.html
+++ b/exercise-16/src/main/resources/templates/authors.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8"/>
@@ -14,12 +14,12 @@
             border-collapse: collapse;
         }
 
-        .persons tr td, th {
+        .authors tr td, th {
             padding: 5px;
             border: 1px solid steelblue;
         }
 
-        .persons td:last-child, td:first-child {
+        .authors td:last-child, td:first-child {
             width: 50px;
         }
 
