--- a/exercise-16/src/main/resources/templates/comments.html
+++ b/exercise-16/src/main/resources/templates/comments.html
@@ -14,12 +14,12 @@
             border-collapse: collapse;
         }
 
-        .persons tr td, th {
+        .comments tr td, th {
             padding: 5px;
             border: 1px solid steelblue;
         }
 
-        .persons td:last-child, td:first-child {
+        .comments td:last-child, td:first-child {
             width: 50px;
         }
 
