--- a/exercise-16/src/main/resources/templates/edit.html
+++ b/exercise-16/src/main/resources/templates/edit.html
@@ -54,8 +54,8 @@
             </div>
 
             <div class="row">
-                <label for="person-name-input">Title:</label>
-                <input id="person-name-input" name="title" type="text" th:value="*{title}" value="The Da Vinci Code"/>
+                <label for="book-name-input">Title:</label>
+                <input id="book-name-input" name="title" type="text" th:value="*{title}" value="The Da Vinci Code"/>
                 <div class="errors" th:if="${#fields.hasErrors('title')}" th:errors="*{title}">Wrong book title error</div>
             </div>
 
