--- a/exercise-16/src/main/resources/templates/index.html
+++ b/exercise-16/src/main/resources/templates/index.html
@@ -14,12 +14,12 @@
                 border-collapse: collapse;
             }
 
-            .persons tr td, th {
+            .books tr td, th {
                 padding: 5px;
                 border: 1px solid steelblue;
             }
 
-            .persons td:last-child, td:first-child {
+            .books td:last-child, td:first-child {
                 width: 50px;
             }
 
