--- a/exercise-16/src/main/resources/templates/save.html
+++ b/exercise-16/src/main/resources/templates/save.html
@@ -28,9 +28,6 @@
             padding-left: 30px;
         }
 
-        .errors {
-            color: red;
-        }
     </style>
 
     <style type="text/css" th:inline="text">
@@ -44,7 +41,7 @@
 </head>
     <body>
 
-    <!-- Book edition -->
+     Book edition
         <div class="container my-5">
             <h2 class="mb-5" th:text="#{book-form-new}">New Book</h2>
             <div class="row">
@@ -54,7 +51,7 @@
 
                         <div class="row">
                             <label for="author-select" th:text="#{author-table-header}">Author_</label>
-                            <select id="author-select" th:field="*{authorsList}" name="authorsList">
+                            <select id="author-select" th:field="*{author}" name="authorsList">
                                     <option th:each="eAuthor : ${authorsList}"
                                         th:value="${eAuthor.id}"
                                         th:text="${eAuthor.name}">Author name
@@ -64,7 +61,7 @@
 
                         <div class="row">
                             <label for="genre-select" th:text="#{book-table-genres}">Genre_</label>
-                            <select id="genre-select" th:field="*{genresList}" name="genresList">
+                            <select id="genre-select" th:field="*{genre}" name="genresList">
                                 <option th:each="eGenre : ${genresList}"
                                         th:value="${eGenre.id}"
                                         th:text="${eGenre.type}"> Genre name
@@ -89,6 +86,5 @@
                 </div>
             </div>
         </div>
-
     </body>
 </html>
